# gammer

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  test.gap
src/gammer/: __init__.py  __main__.py  color.py  cube.py  gam.py  generate.py  image.py  main.py  multiply.py  object.py
tests/: test_image.py  test_multiply.py
